--- a/Modelo de cajas, display y position/ejercicio-3.html
+++ b/Modelo de cajas, display y position/ejercicio-3.html
@@ -18,21 +18,24 @@
 	<div class="bandera">
         <div class="sq_den1"></div>
         <div class="sq_den2"></div>
+		<div class="sq_den3"></div>
+        <div class="sq_den4"></div>
+
     </div>
-    <p>Dinamarca</p>
+
 	<div class="bandera">
         <div class="emir1">
             <div class="emir4"></div>
         </div>
         <div class="emir2"></div>
         <div class="emir3"></div>
-
         <p>Emirates</p>
     </div>
 	<div class="bandera">
         <div class="japo"></div>
+
     </div>
-    <p>Japón</p>
+ 
 
 </body>
 </html>
